--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,5 +12,8 @@ layout: compress
                 {{ content }}
             </section>
         {% include scripts.html %}
+        {% if jekyll.environment == 'production' %}
+        {% include analytics.html %}
+        {% endif %}
     </body>
 </html>
