--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,6 +6,9 @@ layout: compress
 <html lang="pt-br">
   	{% include head.html %}
     <body>
+        {% if jekyll.environment == 'production' %}
+        {% include analytics.html %}
+        {% endif %}
     	{% include svg-icons.html %}
 		<header class="page-header">
 			<h1 class="post-title">{{ page.title }}</h1>
