--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -8,3 +8,5 @@
   ga('send', 'pageview');
 
 </script>
+
+<meta name="google-site-verification" content="YQAdDTKEgvr5DDBRZVjCjSEVbKQtGR7z8InvFo3NbxE" />
